--- a/_bibliography/thesis.bib
+++ b/_bibliography/thesis.bib
@@ -1,82 +1,12 @@
----
----
-@misc{talk_2,
-      title={Medvedev degrees of effective subshifts on groups}, 
-      author={Nicanor Carrasco-Vargas},
-      year={2023},
-      month={March},
-      abstract={It is known that the class of effective subshifts in $\mathbb{Z}$ can attain all $\Pi_1$ Medvedev degrees. In this talk we will discuss how this result extends to the class of finitely generated groups with decidable word problem. 
-      This involves codifying translation-like actions by $\mathbb{Z}$ as a subshift, and takes us to the problem of the computability of translation-like actions on locally finite graphs},
-      slides={talk_2.pdf},
-      note={Journées annuelles SDA2, Toulouse, France},
-      website={https://indico.math.cnrs.fr/event/9357/}
-}
-
-@misc{talk_3,
-      title={Medvedev degrees and subshifts}, 
-      author={Nicanor Carrasco-Vargas},
-      year={2023},
-      month={July},
-      abstract={The abstract is in the "pdf" button},
-      slides={talk_3.pdf},
-      pdf={talk_3_abstract.pdf},
-      note={16th International Conference on Computability, Complexity and Randomness. Kochel, Germany},
-      website={http://cca-net.de/ccr2023/}
-}
-
-
-@misc{talk_4,
-      title={Un invariante para subshifts de naturaleza recursiva}, 
-      author={Nicanor Carrasco-Vargas},
-      year={2023},
-      month={September},
-      abstract={En 1974 Hanf y Myers exhibiron un subshift de tipo finito en $\mathbb{Z}^2$ cuyas configuraciones son todas incalculables en el                 sentido de la teoria de la recursión. En esta charla discutiremos cómo este fenómeno se captura con un invariante dinámico para                   subshifts, el invariante m. Este invariante comparte algunas propiedades con la entropía topológica como no aumentar por factores.                También se relaciona con otras propiedades de origen dinámico y topológico tales como la aperiodicidad o la existencia puntos                     aislados en el espacio de todos los subshifts.},
-      note={Seminario de Sistemas Dinámicos de Santiago, Santiago, Chile},
-      website={http://www.dynamicalsystems.cl/?page_id=286},
-}
-@misc{talk_5,
-      title={Un invariante para subshifts de naturaleza recursiva}, 
-      author={Nicanor Carrasco-Vargas},
-      year={2023},
-      month={December},
-      abstract={The abstract is in the "pdf" button.},
-      note={Encuentro sociedad matemática de chile 2023, Santiago, Chile},
-      slides={talk_5.pdf},
-      pdf={talk_5_abstract.pdf},
-      website={https://sites.google.com/uchile.cl/somachi2023/actividades-cient%C3%ADficas/sesiones-tem%C3%A1ticas},
-}
-@misc{talk_6,
-      title={Are all dynamical properties of $\mathbb{Z}^2$-SFTs undecidable?}, 
+@phdthesis{thesis,
+      title={Subshifts on groups and computable analysis}, 
       author={Nicanor Carrasco-Vargas},
       year={2024},
-      month={February},
-      note={Poster for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. },
-      poster={Paper_3_poster.pdf},
-      website={https://conferences.cirm-math.fr/3007.html},
-}
-@misc{talk_7,
-      title={A recursion-theoretic invariant for subshifts}, 
-      author={Nicanor Carrasco-Vargas},
-      year={2024},
-      month={February},
-      note={Talk for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. },
-      slides={Talk_7.pdf},
-      website={https://conferences.cirm-math.fr/3007.html},
-}
-@misc{talk_8,
-      title={Tilings of the plane: aperiodicity, undecidability, and a Rice theorem}, 
-      author={Nicanor Carrasco-Vargas},
-      year={2024},
-      month={May},
-      note={Talk for CENIA seminar},
-      slides={Talk_8.pdf},
-      poster={Talk_8_poster.jpg}
-}
-@misc{talk_9,
-      title={Tilings of the plane: aperiodicity, undecidability, and a Rice theorem}, 
-      author={Nicanor Carrasco-Vargas},
-      year={2024},
-      month={May},
-      note={Talk for postgraduate school UFRO - Lican Ray},
-      slides={Talk_9.pdf},
+      abstract={Subshifts are a fundamental class of topological dynamical systems. The study of subshifts on groups different from $\mathbb{Z}$, such as $\mathbb{Z}^d$, $d\geq 2$, has been a subject of intense research in recent years. These investigations have unveiled aremarkable connection between dynamics and recursion theory. That is, different questions about the dynamics of these systems have been answered in recursion-theoretical terms. In this work we further explore this connection. We use the framework of computable analysis to explore the class of effective dynamical systems on metric spaces, and relate these systems to subshifts of finite type (SFTs) on groups. We prove that every effective dynamical system on a general metric space is the topological factor of an effective dynamical system with topological dimension zero. We combine this result with existing simulation results to obtain new examples of systems that are factors of SFTsWe also study a conjugacy invariant for subshifts on groups called Medvedev degree. This invariant is a complexity measure of algorithmic nature. We develop the basic theory of these degrees for subshifts on arbitrary finitely generated groups. Using these tools we are able to classify the values that this invariant attains for SFTs and other classes of subshifts on several groups. Furthermore, we establish a connection between these degrees and the distribution of isolated points in the space of all subshifts. Motivated by the study of Medvedev degrees of subshifts, we also consider translation-like actions of groups on graphs. We prove that every connected, locally finite, and infinite graph admits a translation by $\mathbb{Z}$, and that this action can be chosen transitive exactly when the graph has one or two ends. This generalizes a result of Seward about translation-like action of $\mathbb{Z}$ on finitely generated groups. Our proof is constructive, and allows us to prove that under natural hypotheses, translation-like actions by $\mathbb{Z}$ on groups and graphs can be effectively computed.
+      },
+      school={Pontifical Catholic University of Chile},
+      pdf={Thesis.pdf},
+      note={https://repositorio.uc.cl/handle/11534/88339},
+      url={https://repositorio.uc.cl/handle/11534/88339},
+      website={https://repositorio.uc.cl/handle/11534/88339}
 }
