--- a/_bibliography/thesis.bib
+++ b/_bibliography/thesis.bib
@@ -7,7 +7,7 @@
       bibtex_show={true},
       type={PhD Thesis},
       pdf={Thesis.pdf},
-      note={},
+      note={PhD thesis, https://repositorio.uc.cl/handle/11534/88339},
       url={https://repositorio.uc.cl/handle/11534/88339},
       website={https://repositorio.uc.cl/handle/11534/88339}
 }
