--- a/_bibliography/thesis.bib
+++ b/_bibliography/thesis.bib
@@ -5,6 +5,7 @@
       abstract={Subshifts are a fundamental class of topological dynamical systems. The study of subshifts on groups different from $\mathbb{Z}$, such as $\mathbb{Z}^d$, $d\geq 2$, has been a subject of intense research in recent years. These investigations have unveiled aremarkable connection between dynamics and recursion theory. That is, different questions about the dynamics of these systems have been answered in recursion-theoretical terms. In this work we further explore this connection. We use the framework of computable analysis to explore the class of effective dynamical systems on metric spaces, and relate these systems to subshifts of finite type (SFTs) on groups. We prove that every effective dynamical system on a general metric space is the topological factor of an effective dynamical system with topological dimension zero. We combine this result with existing simulation results to obtain new examples of systems that are factors of SFTsWe also study a conjugacy invariant for subshifts on groups called Medvedev degree. This invariant is a complexity measure of algorithmic nature. We develop the basic theory of these degrees for subshifts on arbitrary finitely generated groups. Using these tools we are able to classify the values that this invariant attains for SFTs and other classes of subshifts on several groups. Furthermore, we establish a connection between these degrees and the distribution of isolated points in the space of all subshifts. Motivated by the study of Medvedev degrees of subshifts, we also consider translation-like actions of groups on graphs. We prove that every connected, locally finite, and infinite graph admits a translation by $\mathbb{Z}$, and that this action can be chosen transitive exactly when the graph has one or two ends. This generalizes a result of Seward about translation-like action of $\mathbb{Z}$ on finitely generated groups. Our proof is constructive, and allows us to prove that under natural hypotheses, translation-like actions by $\mathbb{Z}$ on groups and graphs can be effectively computed.},
       school={Pontifical Catholic University of Chile},
       bibtex_show={true},
+      preview={thesis.png},
       type={PhD Thesis},
       pdf={Thesis.pdf},
       note={PhD thesis, https://repositorio.uc.cl/handle/11534/88339},
