--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -48,7 +48,7 @@ We revisit the problem of algorithmically deciding whether a given infinite conn
 title={Effective dynamical systems beyond dimension zero and factors of SFTs}, 
 DOI={10.1017/etds.2024.79}, 
 journal={Ergodic Theory and Dynamical Systems}, 
-author={Sebastián Barbieri, Nicanor Carrasco-Vargas and Cristóbal Rojas}, 
+author={Sebastián Barbieri and Nicanor Carrasco-Vargas and Cristóbal Rojas}, 
 year={2024}, 
 preview={paper.png},
 arxiv={2401.07973},
