--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -80,3 +80,9 @@
       note={Talk for postgraduate school UFRO - Lican Ray},
       slides={Talk_9.pdf},
 }
+@misc{talk_10,
+      title={Tilings of the plane: aperiodicity, undecidability, and a Rice theorem}, 
+      year={2024},
+      month={December},
+      note={Talk for dynamics seminar, Jagiellonian University},
+}
