--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -81,8 +81,16 @@
       slides={Talk_9.pdf},
 }
 @misc{talk_10,
-      title={Tilings of the plane: aperiodicity, undecidability, and a Rice theorem}, 
+      title={Medvedev degrees of subshifts}, 
       year={2024},
+      abstract={The Medvedev degree of a subshift is an invariant of topological conjugacy that measures how hard is to find configurations in the subshift from the viewpoint of recursion theory. These degrees share some properties with topological entropy for amenable groups, such as being non-increasing by factor maps, and having a simple behavior for direct products and disjoint  unions.
+
+In this talk I will present the basic theory of Medvedev degrees of subshifts, and some results about the classification problem of these degrees for subshifts of finite type on different finitely generated groups.
+
+As a motivation I will present some applications of the existence of SFTs with nontrivial Medvedev degree. For instance, this is a key ingredient in Hochman's proof that in the space of $\mathbb{Z}^2$-actions on the Cantor space, there is no action with residual topological conjugacy class (i.e. that the theorem of Kechris and Rosendal for $\mathbb{Z}$-actions is not true for $\mathbb{Z}^2$-actions).
+
+
+},
       month={December},
       note={Talk for dynamics seminar, Jagiellonian University},
 }
