--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -82,5 +82,6 @@
                   As a motivation I will present some applications of the existence of SFTs with nontrivial Medvedev degree. For instance, this is a key ingredient in Hochman's proof that in the space of $\mathbb{Z}^2$-actions on the Cantor space, there is no action with residual topological conjugacy class (i.e. that the theorem of Kechris and Rosendal for $\mathbb{Z}$-actions is not true for $\mathbb{Z}^2$-actions).
                   },
       month={December},
+      slides={talk_10.pdf},
       note={Talk for dynamics seminar, Jagiellonian University},
 }
