--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -76,8 +76,9 @@ pages={1–41}}
       arxiv={2401.10347},
       archivePrefix={arXiv},
       bibtex_show={true},
-      preview={arxiv.png},
+      preview={paper.png},
       poster={Paper_3_poster.pdf},
+      note={Accepted in Archiv der Mathematik.}
 }
 @misc{barbieri2024medvedev,
       title={Medvedev degrees of subshifts on groups}, 
