--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -52,7 +52,7 @@ We use the aforementioned tools to study the possible values taken by this invar
 }
 
 @misc{carrascovargas2023characterization,
-      title={Infinite Eulerian trails are computable on graphs with vertices of infinite degree}, 
+      title={Infinite Eulerian paths are computable on graphs with vertices of infinite degree}, 
       author={Nicanor Carrasco-Vargas},
       bibtex_show={true},
       year={2023},
@@ -60,11 +60,8 @@ We use the aforementioned tools to study the possible values taken by this invar
       preview={paper.png},
       archivePrefix={arXiv},
       primaryClass={math.CO},
-      abstract={The Erdős, Grünwald and Weiszfeld theorem provides a characterization of infinite graphs which are Eulerian. That is, infinite graphs which admit infinite Eulerian trails. In this article we complement this theorem with a characterization of those finite trails that can be extended to infinite Eulerian trails. This allows us to prove an effective version of the Erdős, Grünwald and Weiszfeld theorem for a class of graphs that includes non locally finite ones, generalizing a theorem of D.Bean.},
-      pdf={Paper_2.pdf},
       url={https://arxiv.org/abs/2303.14820},
       note={Accepted in Computability.}
-
 }
 @article{BARBIERI_CARRASCO-VARGAS_ROJAS_2024, 
 title={Effective dynamical systems beyond dimension zero and factors of SFTs}, 
