--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -66,18 +66,18 @@ We use the aforementioned tools to study the possible values taken by this invar
 @article{BARBIERI_CARRASCO-VARGAS_ROJAS_2024, 
 title={Effective dynamical systems beyond dimension zero and factors of SFTs}, 
 DOI={10.1017/etds.2024.79}, 
-journal={Ergodic Theory and Dynamical Systems}, 
+journal={Ergodic Theory and Dynamical Systems},
 author={Sebastián Barbieri and Nicanor Carrasco-Vargas and Cristóbal Rojas}, 
 year={2024}, 
 preview={paper.png},
+volume={45},
+year={2025},
+number={5},
 arxiv={2401.07973},
-pdf={Paper_Effective_dynamical_systems_beyond_dimension_zero_and_factors_of_SFTs.pdf},
 abstract={Using tools from computable analysis we develop a notion of effectiveness for general dynamical systems as those group actions on arbitrary spaces that contain a computable representative in their topological conjugacy class. Most natural systems one can think of are effective in this sense, including some group rotations, affine actions on the torus and finitely presented algebraic actions. We show that for finitely generated and recursively presented groups, every effective dynamical system is the topological factor of a computable action on an effectively closed subset of the Cantor space. We then apply this result to extend the simulation results available in the literature beyond zero-dimensional spaces. In particular, we show that for a large class of groups, many of these natural actions are topological factors of subshifts of finite type.},
 bibtex_show={true},
-url={https://www.cambridge.org/core/journals/ergodic-theory-and-dynamical-systems/article/effective-dynamical-systems-beyond-dimension-zero-and-factors-of-sfts/F64D571FCEDD8528C3EC0640C76FFA9F},
 website={https://www.cambridge.org/core/journals/ergodic-theory-and-dynamical-systems/article/effective-dynamical-systems-beyond-dimension-zero-and-factors-of-sfts/F64D571FCEDD8528C3EC0640C76FFA9F},
-pages={1–41}}
-
+pages={1329–1369}}
 @misc{carrascovargas2024rice,
       title={On a Rice theorem for dynamical properties of SFTs on groups}, 
       author={Nicanor Carrasco-Vargas},
