--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -3,6 +3,19 @@
 
 
 
+@misc{talk_11,
+      title={Automorphism groups of subshifts}, 
+      year={2025},
+      abstract={
+An automorphism of a topological dynamical system is a homeomorphism of the space that commutes with the dynamics. The automorphism group of a system is the set of its automorphisms with the group operation of composition, and it is a topological conjugacy invariant.
+
+In a seminal paper from 1969 Hedlund began the study of automorphism groups of fullshifts. He proved that this group is countable and contains many groups. Since then, automorphism groups of subshifts have often been studied through their subgroups. Mixing properties of a subshift have been related with more subgroups in the automorphism group, while low complexity of the subshift has been related to a smaller class of subgroups.
+
+A prominent open question is whether the 2-shift and 3-shift have the same automorphism groups. It is known that they can not be distinguished by their subgroups, and that the 2-shift and 4-shift have different automorphism groups. In the talk I will talk about these things and a recent work with S.Barbieri and P.Rivera-Burgos.},
+      month={April},
+      slides={talk_11.pdf},
+      note={Talk for dynamics seminar, Jagiellonian University},
+}
 @misc{talk_10,
       title={Medvedev degrees of subshifts}, 
       year={2024},
