--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -13,7 +13,7 @@ In a seminal paper from 1969 Hedlund began the study of automorphism groups of f
 
 A prominent open question is whether the 2-shift and 3-shift have the same automorphism groups. It is known that they can not be distinguished by their subgroups, and that the 2-shift and 4-shift have different automorphism groups. In the talk I will talk about these things and a recent work with S.Barbieri and P.Rivera-Burgos.},
       month={April},
-      slides={talk_11.pdf},
+      slides={Talk_11.pdf},
       note={Talk for dynamics seminar, Jagiellonian University},
 }
 @misc{talk_10,
