--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -78,14 +78,16 @@ abstract={Using tools from computable analysis we develop a notion of effectiven
 bibtex_show={true},
 website={https://www.cambridge.org/core/journals/ergodic-theory-and-dynamical-systems/article/effective-dynamical-systems-beyond-dimension-zero-and-factors-of-sfts/F64D571FCEDD8528C3EC0640C76FFA9F},
 pages={1329–1369}}
-@misc{carrascovargas2024rice,
+@article{carrascovargas2024rice,
       title={On a Rice theorem for dynamical properties of SFTs on groups}, 
+      doi={https://doi.org/10.1007/s00013-025-02125-x},
+      journal={Archiv der Mathematik},
       author={Nicanor Carrasco-Vargas},
-      year={2024},
+      year={2025},
       arxiv={2401.10347},
       archivePrefix={arXiv},
+      website={https://link.springer.com/article/10.1007/s00013-025-02125-x},
       bibtex_show={true},
       preview={paper.png},
       poster={Paper_3_poster.pdf},
-      note={Accepted in Archiv der Mathematik.}
 }
