--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -86,7 +86,7 @@ pages={1329–1369}}
       year={2025},
       volume={124},
       issue={6},
-      number={591-603}
+      number={591-603},
       arxiv={2401.10347},
       archivePrefix={arXiv},
       website={https://link.springer.com/article/10.1007/s00013-025-02125-x},
