--- a/_bibliography/thesis.bib
+++ b/_bibliography/thesis.bib
@@ -8,7 +8,8 @@
       preview={thesis.png},
       type={PhD Thesis},
       pdf={Thesis.pdf},
-      note={PhD thesis, https://repositorio.uc.cl/handle/11534/88339},
+      note={PhD thesis},
+      url_show={true},
       url={https://repositorio.uc.cl/handle/11534/88339},
       website={https://repositorio.uc.cl/handle/11534/88339}
 }
