--- a/_bibliography/thesis.bib
+++ b/_bibliography/thesis.bib
@@ -7,9 +7,5 @@
       bibtex_show={true},
       preview={thesis.png},
       type={PhD Thesis},
-      pdf={Thesis.pdf},
-      note={PhD thesis},
-      url_show={true},
-      url={https://repositorio.uc.cl/handle/11534/88339},
-      website={https://repositorio.uc.cl/handle/11534/88339}
+      pdf={Thesis.pdf}
 }
