--- a/_bibliography/thesis.bib
+++ b/_bibliography/thesis.bib
@@ -6,6 +6,6 @@
       school={Pontifical Catholic University of Chile},
       bibtex_show={true},
       preview={thesis.png},
+      arxiv={2505.14247},
       type={PhD Thesis},
-      pdf={Thesis.pdf}
 }
