--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,13 @@
 ---
 ---
+@misc{carrascovargas2025topologicalslowentropysequence,
+      title={Topological slow entropy, sequence entropy, and generalized $[T,T^{-1}]$ systems}, 
+      author={Nicanor Carrasco-Vargas},
+      year={2025},
+      arxiv={2506.17932},
+      bibtex_show={true},
+      preview={arxiv.png}
+}
 @misc{barbieri2025automorphismgroupstronglyirreducible,
       title={The automorphism group of a strongly irreducible subshift on a group}, 
       author={Sebastián Barbieri and Nicanor Carrasco-Vargas and Paola Rivera-Burgos},
