--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -48,27 +48,24 @@ A prominent open question is whether the 2-shift and 3-shift have the same autom
       title={A recursion-theoretic invariant for subshifts},
       year={2024},
       month={February},
-      note={Talk for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. },
+      note={Talk for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words, https://conferences.cirm-math.fr/3007.html },
       slides={Talk_7.pdf},
-      website={https://conferences.cirm-math.fr/3007.html},
 }
 @misc{talk_6,
       title={Are all dynamical properties of $\mathbb{Z}^2$-SFTs undecidable?}, 
       year={2024},
       month={February},
-      note={Poster for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. },
+      note={Poster for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. https://conferences.cirm-math.fr/3007.html },
       poster={Paper_3_poster.pdf},
-      website={https://conferences.cirm-math.fr/3007.html},
 }
 @misc{talk_5,
       title={Un invariante para subshifts de naturaleza recursiva}, 
       year={2023},
       month={December},
       abstract={The abstract is in the "pdf" button.},
-      note={Encuentro sociedad matemática de chile 2023, Santiago, Chile},
+      note={Encuentro sociedad matemática de chile 2023, Santiago, Chile, https://sites.google.com/uchile.cl/somachi2023/actividades-cient%C3%ADficas/sesiones-tem%C3%A1ticas},
       slides={talk_5.pdf},
       pdf={talk_5_abstract.pdf},
-      website={https://sites.google.com/uchile.cl/somachi2023/actividades-cient%C3%ADficas/sesiones-tem%C3%A1ticas},
 }
 
 
@@ -77,8 +74,7 @@ A prominent open question is whether the 2-shift and 3-shift have the same autom
       year={2023},
       month={September},
       abstract={En 1974 Hanf y Myers exhibiron un subshift de tipo finito en $\mathbb{Z}^2$ cuyas configuraciones son todas incalculables en el                 sentido de la teoria de la recursión. En esta charla discutiremos cómo este fenómeno se captura con un invariante dinámico para                   subshifts, el invariante m. Este invariante comparte algunas propiedades con la entropía topológica como no aumentar por factores.                También se relaciona con otras propiedades de origen dinámico y topológico tales como la aperiodicidad o la existencia puntos                     aislados en el espacio de todos los subshifts.},
-      note={Seminario de Sistemas Dinámicos de Santiago, Santiago, Chile},
-      website={http://www.dynamicalsystems.cl/?page_id=286},
+      note={Seminario de Sistemas Dinámicos de Santiago, Santiago, Chile, http://www.dynamicalsystems.cl/?page_id=286},
 }
 
 
@@ -89,8 +85,7 @@ A prominent open question is whether the 2-shift and 3-shift have the same autom
       abstract={The abstract is in the "pdf" button},
       slides={talk_3.pdf},
       pdf={talk_3_abstract.pdf},
-      note={16th International Conference on Computability, Complexity and Randomness. Kochel, Germany},
-      website={http://cca-net.de/ccr2023/}
+      note={16th International Conference on Computability, Complexity and Randomness. Kochel, Germany, http://cca-net.de/ccr2023/},
 }
 
 
@@ -101,6 +96,5 @@ A prominent open question is whether the 2-shift and 3-shift have the same autom
       abstract={It is known that the class of effective subshifts in $\mathbb{Z}$ can attain all $\Pi_1$ Medvedev degrees. In this talk we will discuss how this result extends to the class of finitely generated groups with decidable word problem. 
       This involves codifying translation-like actions by $\mathbb{Z}$ as a subshift, and takes us to the problem of the computability of translation-like actions on locally finite graphs},
       slides={talk_2.pdf},
-      note={Journées annuelles SDA2, Toulouse, France},
-      website={https://indico.math.cnrs.fr/event/9357/}
+      note={Journées annuelles SDA2, Toulouse, France, https://indico.math.cnrs.fr/event/9357/},
 }
