--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
       year={2025},
       arxiv={2506.17932},
       bibtex_show={true},
-      preview={arxiv.png}
+      preview={arxiv.png},
 }
 @misc{barbieri2025automorphismgroupstronglyirreducible,
       title={The automorphism group of a strongly irreducible subshift on a group}, 
