--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -1,6 +1,17 @@
 ---
 ---
 
+@misc{talk_12,
+      title={Topological slow entropy of some skew products}, 
+      year={2025},
+      month={august}
+      abstract={
+This talk is about a family of skew products that naturally generalize the [T,T⁻¹] system, well studied in ergodic theory. We consider the analogous construction in the topological category. These systems are built by a subshift in the base, a continuous cocycle to the integers, and an arbitrary invertible system in the fiber. We are interested in the situation where the entropy of the skew product construction is independent of the entropy of the fiber system. In this case we have a large family of systems in which the invariant of topological entropy is constant and therefore does not provide much information. The main result states that under suitable conditions, the entropy of the fiber system can be recovered as the slow entropy of the skew product with a well-chosen scale. This result provides a topological analogous of existing results in the measurable category (Heicklen, Hoffman, & Rudolph; Ball; Austin), and the main novelty is that it covers some instances zero-entropy systems in the base. 
+
+The talk will be based on the recent preprint https://arxiv.org/abs/2506.17932},
+      slides={Talk_12.pdf},
+      note={Talk for Recurrent ETDS seminar, https://sites.google.com/view/recurrentetds/home},
+}
 
 
 @misc{talk_11,
