--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -1,23 +1,17 @@
 ---
 ---
 
-@misc{talk_12,
-      title={Topological slow entropy of some skew products}, 
-      year={2025},
-      month={August}
-      abstract={
-      This talk is about a family of skew products that naturally generalize the [T,T⁻¹] system, well studied in ergodic theory. We consider the analogous construction in the topological category. These systems are built by a subshift in the base, a continuous cocycle to the integers, and an arbitrary invertible system in the fiber. We are interested in the situation where the entropy of the skew product construction is independent of the entropy of the fiber system. In this case we have a large family of systems in which the invariant of topological entropy is constant and therefore does not provide much information. The main result states that under suitable conditions, the entropy of the fiber system can be recovered as the slow entropy of the skew product with a well-chosen scale. This result provides a topological analogous of existing results in the measurable category (Heicklen, Hoffman, & Rudolph; Ball; Austin), and the main novelty is that it covers some instances zero-entropy systems in the base. 
-      The talk will be based on the recent preprint https://arxiv.org/abs/2506.17932},
-      slides={Talk_12.pdf},
-      note={Talk for Recurrent ETDS seminar, https://sites.google.com/view/recurrentetds/home},
-}
+
+
 @misc{talk_11,
       title={Automorphism groups of subshifts}, 
       year={2025},
       abstract={
-      An automorphism of a topological dynamical system is a homeomorphism of the space that commutes with the dynamics. The automorphism group of a system is the set of its automorphisms with the group operation of composition, and it is a topological conjugacy invariant.
-      In a seminal paper from 1969 Hedlund began the study of automorphism groups of fullshifts. He proved that this group is countable and contains many groups. Since then, automorphism groups of subshifts have often been studied through their subgroups. Mixing properties of a subshift have been related with more subgroups in the automorphism group, while low complexity of the subshift has been related to a smaller class of subgroups.
-      A prominent open question is whether the 2-shift and 3-shift have the same automorphism groups. It is known that they can not be distinguished by their subgroups, and that the 2-shift and 4-shift have different automorphism groups. In the talk I will talk about these things and a recent work with S.Barbieri and P.Rivera-Burgos.},
+An automorphism of a topological dynamical system is a homeomorphism of the space that commutes with the dynamics. The automorphism group of a system is the set of its automorphisms with the group operation of composition, and it is a topological conjugacy invariant.
+
+In a seminal paper from 1969 Hedlund began the study of automorphism groups of fullshifts. He proved that this group is countable and contains many groups. Since then, automorphism groups of subshifts have often been studied through their subgroups. Mixing properties of a subshift have been related with more subgroups in the automorphism group, while low complexity of the subshift has been related to a smaller class of subgroups.
+
+A prominent open question is whether the 2-shift and 3-shift have the same automorphism groups. It is known that they can not be distinguished by their subgroups, and that the 2-shift and 4-shift have different automorphism groups. In the talk I will talk about these things and a recent work with S.Barbieri and P.Rivera-Burgos.},
       month={April},
       slides={Talk_11.pdf},
       note={Talk for dynamics seminar, Jagiellonian University},
@@ -26,7 +20,9 @@
       title={Medvedev degrees of subshifts}, 
       year={2024},
       abstract={The Medvedev degree of a subshift is an invariant of topological conjugacy that measures how hard is to find configurations in the subshift from the viewpoint of recursion theory. These degrees share some properties with topological entropy for amenable groups, such as being non-increasing by factor maps, and having a simple behavior for direct products and disjoint  unions.
+
                   In this talk I will present the basic theory of Medvedev degrees of subshifts, and some results about the classification problem of these degrees for subshifts of finite type on different finitely generated groups.
+
                   As a motivation I will present some applications of the existence of SFTs with nontrivial Medvedev degree. For instance, this is a key ingredient in Hochman's proof that in the space of $\mathbb{Z}^2$-actions on the Cantor space, there is no action with residual topological conjugacy class (i.e. that the theorem of Kechris and Rosendal for $\mathbb{Z}$-actions is not true for $\mathbb{Z}^2$-actions).
                   },
       month={December},
@@ -52,24 +48,27 @@
       title={A recursion-theoretic invariant for subshifts},
       year={2024},
       month={February},
-      note={Talk for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words, https://conferences.cirm-math.fr/3007.html },
+      note={Talk for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. },
       slides={Talk_7.pdf},
+      website={https://conferences.cirm-math.fr/3007.html},
 }
 @misc{talk_6,
       title={Are all dynamical properties of $\mathbb{Z}^2$-SFTs undecidable?}, 
       year={2024},
       month={February},
-      note={Poster for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. https://conferences.cirm-math.fr/3007.html },
+      note={Poster for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. },
       poster={Paper_3_poster.pdf},
+      website={https://conferences.cirm-math.fr/3007.html},
 }
 @misc{talk_5,
       title={Un invariante para subshifts de naturaleza recursiva}, 
       year={2023},
       month={December},
       abstract={The abstract is in the "pdf" button.},
-      note={Encuentro sociedad matemática de chile 2023, Santiago, Chile, https://sites.google.com/uchile.cl/somachi2023/actividades-cient%C3%ADficas/sesiones-tem%C3%A1ticas},
+      note={Encuentro sociedad matemática de chile 2023, Santiago, Chile},
       slides={talk_5.pdf},
       pdf={talk_5_abstract.pdf},
+      website={https://sites.google.com/uchile.cl/somachi2023/actividades-cient%C3%ADficas/sesiones-tem%C3%A1ticas},
 }
 
 
@@ -78,7 +77,8 @@
       year={2023},
       month={September},
       abstract={En 1974 Hanf y Myers exhibiron un subshift de tipo finito en $\mathbb{Z}^2$ cuyas configuraciones son todas incalculables en el                 sentido de la teoria de la recursión. En esta charla discutiremos cómo este fenómeno se captura con un invariante dinámico para                   subshifts, el invariante m. Este invariante comparte algunas propiedades con la entropía topológica como no aumentar por factores.                También se relaciona con otras propiedades de origen dinámico y topológico tales como la aperiodicidad o la existencia puntos                     aislados en el espacio de todos los subshifts.},
-      note={Seminario de Sistemas Dinámicos de Santiago, Santiago, Chile, http://www.dynamicalsystems.cl/?page_id=286},
+      note={Seminario de Sistemas Dinámicos de Santiago, Santiago, Chile},
+      website={http://www.dynamicalsystems.cl/?page_id=286},
 }
 
 
@@ -89,7 +89,8 @@
       abstract={The abstract is in the "pdf" button},
       slides={talk_3.pdf},
       pdf={talk_3_abstract.pdf},
-      note={16th International Conference on Computability, Complexity and Randomness. Kochel, Germany, http://cca-net.de/ccr2023/},
+      note={16th International Conference on Computability, Complexity and Randomness. Kochel, Germany},
+      website={http://cca-net.de/ccr2023/}
 }
 
 
@@ -100,5 +101,6 @@
       abstract={It is known that the class of effective subshifts in $\mathbb{Z}$ can attain all $\Pi_1$ Medvedev degrees. In this talk we will discuss how this result extends to the class of finitely generated groups with decidable word problem. 
       This involves codifying translation-like actions by $\mathbb{Z}$ as a subshift, and takes us to the problem of the computability of translation-like actions on locally finite graphs},
       slides={talk_2.pdf},
-      note={Journées annuelles SDA2, Toulouse, France, https://indico.math.cnrs.fr/event/9357/},
+      note={Journées annuelles SDA2, Toulouse, France},
+      website={https://indico.math.cnrs.fr/event/9357/}
 }
