--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -48,9 +48,8 @@ A prominent open question is whether the 2-shift and 3-shift have the same autom
       title={A recursion-theoretic invariant for subshifts},
       year={2024},
       month={February},
-      note={Talk for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. },
+      note={Talk for thematic month at CIRM, France: Discrete Mathematics & Computer Science: Groups, Dynamics, Complexity, Words. https://conferences.cirm-math.fr/3007.html},
       slides={Talk_7.pdf},
-      website={https://conferences.cirm-math.fr/3007.html},
 }
 @misc{talk_6,
       title={Are all dynamical properties of $\mathbb{Z}^2$-SFTs undecidable?}, 
