--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -1,6 +1,15 @@
 ---
 ---
 
+
+@misc{talk_13,
+title={Questions about ranges of RW}, 
+      year={2025},
+      month={September},
+      slides={Talk_13.pdf},
+      note={Lightning talk at YMCN autumn school: Probability and dynamics on groups
+22–26 September 2025, Münster, Germany},
+} 
 @misc{talk_12,
 title={Topological slow entropy of some skew products}, 
       year={2025},
