--- a/_bibliography/preprints.bib
+++ b/_bibliography/preprints.bib
@@ -1,5 +1,14 @@
 ---
 ---
+
+@misc{carrascovargas2025topologicalslowentropysequence,
+      title={Parametrized complexity of relations between multidimensional subshifts}, 
+      author={Nicanor Carrasco-Vargas and Benjamin Hellouin de Menibus and Rémi Pallen},     
+      year={2025},
+      arxiv={2506.17932},
+      bibtex_show={true},
+      preview={arxiv.png},
+}
 @misc{carrascovargas2025topologicalslowentropysequence,
       title={Topological slow entropy, sequence entropy, and generalized $[T,T^{-1}]$ systems}, 
       author={Nicanor Carrasco-Vargas},
