--- a/_bibliography/preprints.bib
+++ b/_bibliography/preprints.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@misc{carrascovargas2025parametrizedcomplexityrelationsmultidimensional,
+@preprint{carrascovargas2025parametrizedcomplexityrelationsmultidimensional,
       title={Parametrized complexity of relations between multidimensional subshifts}, 
       author={Nicanor Carrasco-Vargas and Benjamin Hellouin de Menibus and Rémi Pallen},     
       year={2025},
@@ -9,7 +9,7 @@
       bibtex_show={true},
       preview={arxiv.png},
 }
-@misc{carrascovargas2025topologicalslowentropysequence,
+@preprint{carrascovargas2025topologicalslowentropysequence,
       title={Topological slow entropy, sequence entropy, and generalized $[T,T^{-1}]$ systems}, 
       author={Nicanor Carrasco-Vargas},
       year={2025},
@@ -17,7 +17,7 @@
       bibtex_show={true},
       preview={arxiv.png},
 }
-@misc{barbieri2025automorphismgroupstronglyirreducible,
+@preprint{barbieri2025automorphismgroupstronglyirreducible,
       title={The automorphism group of a strongly irreducible subshift on a group}, 
       author={Sebastián Barbieri and Nicanor Carrasco-Vargas and Paola Rivera-Burgos},
       year={2025},
@@ -43,7 +43,7 @@ We revisit the problem of algorithmically deciding whether a given infinite conn
       url={https://arxiv.org/abs/2409.03113},
 }
 
-@misc{barbieri2024medvedev,
+@preprint{barbieri2024medvedev,
       title={Medvedev degrees of subshifts on groups}, 
       author={Sebastián Barbieri and Nicanor Carrasco-Vargas},
       year={2024}, abstract={The Medvedev degree of a subshift is a dynamical invariant of computable origin that can be used to compare the complexity of subshifts that contain only uncomputable configurations. We develop theory to describe how these degrees can be transferred from one group to another through algebraic and geometric relations, such as quotients, subgroups, translation-like actions and quasi-isometries.
