--- a/_bibliography/preprints.bib
+++ b/_bibliography/preprints.bib
@@ -4,6 +4,7 @@
 @preprint{carrascovargas2025parametrizedcomplexityrelationsmultidimensional,
       title={Parametrized complexity of relations between multidimensional subshifts}, 
       author={Nicanor Carrasco-Vargas and Benjamin Hellouin de Menibus and Rémi Pallen},     
+      pdf={https://arxiv.org/pdf/2506.17932},
       year={2025},
       arxiv={2506.17932},
       bibtex_show={true},
