--- a/_bibliography/preprints.bib
+++ b/_bibliography/preprints.bib
@@ -13,6 +13,7 @@
 @preprint{carrascovargas2025topologicalslowentropysequence,
       title={Topological slow entropy, sequence entropy, and generalized $[T,T^{-1}]$ systems}, 
       author={Nicanor Carrasco-Vargas},
+      pdf={https://arxiv.org/pdf/2506.17932},
       year={2025},
       arxiv={2506.17932},
       bibtex_show={true},
@@ -21,6 +22,7 @@
 @preprint{barbieri2025automorphismgroupstronglyirreducible,
       title={The automorphism group of a strongly irreducible subshift on a group}, 
       author={Sebastián Barbieri and Nicanor Carrasco-Vargas and Paola Rivera-Burgos},
+      pdf={https://arxiv.org/pdf/2501.14463},
       year={2025},
       eprint={2501.14463},
       archivePrefix={arXiv},
@@ -33,22 +35,18 @@ preview={arxiv.png},
 @misc{carrascovargas2024complexityeulerianpathproblem,
       title={On the complexity of the Eulerian path problem for infinite graphs}, 
       author={Nicanor Carrasco-Vargas and Valentino Delle Rose and Cristóbal Rojas},
+      pdf={https://arxiv.org/pdf/2409.03113},
       year={2024},
       preview={arxiv.png},
       bibtex_show={true},
-      doi={https://doi.org/10.48550/arXiv.2409.03113},
       arxiv={2409.03113},
-      abstract={
-We revisit the problem of algorithmically deciding whether a given infinite connected graph has an Eulerian path, namely, a path that uses every edge exactly once.  It has been recently observed that this problem is $D_3^0$-complete for graphs that have a computable description, whereas it is $\Pi_2^0$-complete for graphs that have a highly computable description, and that this same bound holds for the class of automatic graphs. A closely related problem consists of determining the number of ends of a graph, namely, the maximum number of distinct infinite connected components the graph can be separated into after removing a finite set of edges. The complexity of this problem for highly computable graphs is known to be $\Pi_2^0$-complete as well. The connection between these two problems lies in that only graphs with one or two ends can have Eulerian paths. In this paper we are interested in understanding the complexity of the infinite Eulerian path problem in the setting where the input graphs are known to have the right number of ends. We find that in this setting the problem becomes strictly easier, and that its exact difficulty varies according to whether the graphs have one or two ends, and to whether the Eulerian path we are looking for is one-way or bi-infinite. For example, we find that deciding existence of a bi-infinite Eulerian path for one-ended graphs is only $\Pi_1^0$-complete if the graphs are highly computable, and that the same problem becomes decidable for automatic graphs. Our results are based on a detailed computability analysis of what we call the Separation Problem, which we believe to be of independent interest. For instance, as a side application, we observe that K\"onig's infinity lemma, well known to be non-effective in general, becomes effective if we restrict to graphs with finitely many ends.  
-},
-      url={https://arxiv.org/abs/2409.03113},
 }
 
 @preprint{barbieri2024medvedev,
       title={Medvedev degrees of subshifts on groups}, 
       author={Sebastián Barbieri and Nicanor Carrasco-Vargas},
-      year={2024}, abstract={The Medvedev degree of a subshift is a dynamical invariant of computable origin that can be used to compare the complexity of subshifts that contain only uncomputable configurations. We develop theory to describe how these degrees can be transferred from one group to another through algebraic and geometric relations, such as quotients, subgroups, translation-like actions and quasi-isometries.
-We use the aforementioned tools to study the possible values taken by this invariant on subshifts of finite type on some finitely generated groups. We obtain a full classification for some classes, such as virtually polycyclic groups and branch groups with decidable word problem. We also show that all groups which are quasi-isometric to the hyperbolic plane admit SFTs with nonzero Medvedev degree. Furthermore, we provide a classification of the degrees of sofic subshifts for several classes of groups.},
+      year={2024}, 
+      pdf={https://arxiv.org/pdf/2406.12777},
       arxiv={2406.12777},
       preview={arxiv.png}, bibtex_show={true},
       primaryClass={id='math.DS' full_name='Dynamical Systems' is_active=True alt_name=None in_archive='math' is_general=False description='Dynamics of differential equations and flows, mechanics, classical few-body problems, iterations, complex dynamics, delayed differential equations'}
