--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,7 @@
       arxiv={2303.14820},
       url={https://ems.press/journals/ggd/articles/14298058},
       website={https://ems.press/journals/ggd/articles/14298058},
+      note={note},
 }
 
 @article{BARBIERI_CARRASCO-VARGAS_ROJAS_2024, 
