--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,7 +12,7 @@
       arxiv={2303.14820},
       url={https://ems.press/journals/ggd/articles/14298058},
       website={https://ems.press/journals/ggd/articles/14298058},
-      note={note},
+      note={Note: there is a gap in the proof of Lemma 3.2 in the journal version, which is corrected in the arXiv version.},
 }
 
 @article{BARBIERI_CARRASCO-VARGAS_ROJAS_2024, 
