--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,15 +3,15 @@
 @article{carrascovargas2023geometric,
       title={Translation-like actions by $\mathbb{Z}$, the subgroup membership problem, and Medvedev degrees of effective subshifts}, 
       author={Nicanor Carrasco-Vargas},
+      pdf={https://arxiv.org/pdf/2303.14820},
       journal={Groups, Geometry, and Dynamics},
       year={2024},
-      pages={published online first},
+      pages={online first},
       preview={paper.png},
       bibtex_show={true},
       doi={DOI 10.4171/GGD/817},
       arxiv={2303.14820},
       url={https://ems.press/journals/ggd/articles/14298058},
-      website={https://ems.press/journals/ggd/articles/14298058},
       note={Note: there is a small gap in the proof of Lemma 3.2 in the journal version, which is corrected in the arXiv version.},
 }
 
