--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,25 +11,26 @@
       bibtex_show={true},
       doi={DOI 10.4171/GGD/817},
       arxiv={2303.14820},
-      url={https://ems.press/journals/ggd/articles/14298058},
+      website={https://ems.press/journals/ggd/articles/14298058},
       note={Note: there is a small gap in the proof of Lemma 3.2 in the journal version, which is corrected in the arXiv version.},
 }
 
 @article{BARBIERI_CARRASCO-VARGAS_ROJAS_2024, 
 title={Effective dynamical systems beyond dimension zero and factors of SFTs}, 
-DOI={10.1017/etds.2024.79}, 
-journal={Ergodic Theory and Dynamical Systems},
 author={Sebastián Barbieri and Nicanor Carrasco-Vargas and Cristóbal Rojas}, 
+journal={Ergodic Theory and Dynamical Systems},
+pdf={https://arxiv.org/pdf/2401.07973}
 year={2024}, 
 preview={paper.png},
+DOI={10.1017/etds.2024.79}, 
+pages={1329–1369}
 volume={45},
 year={2025},
 number={5},
 arxiv={2401.07973},
-abstract={Using tools from computable analysis we develop a notion of effectiveness for general dynamical systems as those group actions on arbitrary spaces that contain a computable representative in their topological conjugacy class. Most natural systems one can think of are effective in this sense, including some group rotations, affine actions on the torus and finitely presented algebraic actions. We show that for finitely generated and recursively presented groups, every effective dynamical system is the topological factor of a computable action on an effectively closed subset of the Cantor space. We then apply this result to extend the simulation results available in the literature beyond zero-dimensional spaces. In particular, we show that for a large class of groups, many of these natural actions are topological factors of subshifts of finite type.},
 bibtex_show={true},
 website={https://www.cambridge.org/core/journals/ergodic-theory-and-dynamical-systems/article/effective-dynamical-systems-beyond-dimension-zero-and-factors-of-sfts/F64D571FCEDD8528C3EC0640C76FFA9F},
-pages={1329–1369}}
+}
 
 
 @article{carrascovargas2024rice,
