--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -19,11 +19,11 @@
 title={Effective dynamical systems beyond dimension zero and factors of SFTs}, 
 author={Sebastián Barbieri and Nicanor Carrasco-Vargas and Cristóbal Rojas}, 
 journal={Ergodic Theory and Dynamical Systems},
-pdf={https://arxiv.org/pdf/2401.07973}
+pdf={https://arxiv.org/pdf/2401.07973},
 year={2024}, 
 preview={paper.png},
 DOI={10.1017/etds.2024.79}, 
-pages={1329–1369}
+pages={1329–1369},
 volume={45},
 year={2025},
 number={5},
@@ -35,19 +35,18 @@ website={https://www.cambridge.org/core/journals/ergodic-theory-and-dynamical-sy
 
 @article{carrascovargas2024rice,
       title={On a Rice theorem for dynamical properties of SFTs on groups}, 
-      doi={https://doi.org/10.1007/s00013-025-02125-x},
-      journal={Archiv der Mathematik},
       author={Nicanor Carrasco-Vargas},
+      journal={Archiv der Mathematik},
+      doi={https://doi.org/10.1007/s00013-025-02125-x},
       year={2025},
       volume={124},
       issue={6},
       number={591-603},
       arxiv={2401.10347},
-      archivePrefix={arXiv},
       website={https://link.springer.com/article/10.1007/s00013-025-02125-x},
       bibtex_show={true},
       preview={paper.png},
-      poster={Paper_3_poster.pdf},
+      pdf={https://arxiv.org/pdf/2401.10347},
 }
 
 
