--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -53,12 +53,10 @@ website={https://www.cambridge.org/core/journals/ergodic-theory-and-dynamical-sy
 @misc{carrascovargas2023characterization,
       title={Infinite Eulerian paths are computable on graphs with vertices of infinite degree}, 
       author={Nicanor Carrasco-Vargas},
+      journal={Computability (to appear)},
       bibtex_show={true},
-      year={2023},
       arxiv={2305.17998},
       preview={paper.png},
-      archivePrefix={arXiv},
-      primaryClass={math.CO},
+      pdf={https://arxiv.org/pdf/2303.14820},
       url={https://arxiv.org/abs/2303.14820},
-      note={Accepted in Computability.}
 }
