--- a/_bibliography/thesis.bib
+++ b/_bibliography/thesis.bib
@@ -7,5 +7,5 @@
       preview={thesis.png},
       arxiv={2505.14247},
       type={PhD Thesis},
-      pdf={Thesis.pdf}
+      pdf={https://arxiv.org/pdf/2505.14247}
 }
