--- a/_bibliography/thesis.bib
+++ b/_bibliography/thesis.bib
@@ -6,6 +6,7 @@
       bibtex_show={true},
       preview={thesis.png},
       arxiv={2505.14247},
-      type={PhD Thesis},
+      type={PhD Thesis},      
+      doi={https://doi.org/10.7764/tesisUC/MAT/88339},
       pdf={https://arxiv.org/pdf/2505.14247}
 }
