--- a/_bibliography/talks.bib
+++ b/_bibliography/talks.bib
@@ -2,6 +2,13 @@
 ---
 
 
+@misc{talk_14,
+title={Slow entropy of some skew products}, 
+      year={2025},
+      month={October},
+      slides={Talk_14.pdf},
+      note={Talk for Budapest-Wien Dynamics Seminar, ISTA, Austria.},
+} 
 @misc{talk_13,
 title={Questions about ranges of RW}, 
       year={2025},
