--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -57,6 +57,6 @@ website={https://www.cambridge.org/core/journals/ergodic-theory-and-dynamical-sy
       bibtex_show={true},
       arxiv={2305.17998},
       preview={paper.png},
-      pdf={https://arxiv.org/pdf/2303.14820},
-      url={https://arxiv.org/abs/2303.14820},
+      pdf={https://arxiv.org/pdf/2305.17998},
+      url={https://arxiv.org/pdf/2305.17998},
 }
