--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -53,10 +53,14 @@ website={https://www.cambridge.org/core/journals/ergodic-theory-and-dynamical-sy
 @misc{carrascovargas2023characterization,
       title={Infinite Eulerian paths are computable on graphs with vertices of infinite degree}, 
       author={Nicanor Carrasco-Vargas},
-      journal={Computability (to appear)},
+      journal={Computability},
+      volume={14},
+      issue={2},
+      number={95-110},
+      doi={https://doi.org/10.1177/22113568251359095},
       bibtex_show={true},
       arxiv={2305.17998},
       preview={paper.png},
       pdf={https://arxiv.org/pdf/2305.17998},
-      url={https://arxiv.org/pdf/2305.17998},
+      website={https://journals.sagepub.com/doi/abs/10.1177/22113568251359095},
 }
