--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -50,7 +50,7 @@ website={https://www.cambridge.org/core/journals/ergodic-theory-and-dynamical-sy
 }
 
 
-@misc{carrascovargas2023characterization,
+@article{carrascovargas2023characterization,
       title={Infinite Eulerian paths are computable on graphs with vertices of infinite degree}, 
       author={Nicanor Carrasco-Vargas},
       journal={Computability},
