Add preprint entry for topological Rokhlin property
Added a new preprint entry for a paper on topological Rokhlin property.

--- a/_bibliography/preprints.bib
+++ b/_bibliography/preprints.bib
@@ -1,6 +1,14 @@
 ---
 ---
-
+@preprint{theSTRPandMedvedevdegrees,
+      title={The strong topological Rokhlin property and Medvedev degrees of SFTs}, 
+      author={Nicanor Carrasco-Vargas},     
+      pdf={https://arxiv.org/pdf/2601.03501},
+      year={2026},
+      arxiv={2601.03501},
+      bibtex_show={true},
+      preview={arxiv.png},
+}
 @preprint{carrascovargas2025parametrizedcomplexityrelationsmultidimensional,
       title={Parametrized complexity of relations between multidimensional subshifts}, 
       author={Nicanor Carrasco-Vargas and Benjamin Hellouin de Menibus and Rémi Pallen},     
