Add new article entry for Eulerian path problem

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -49,7 +49,16 @@ website={https://www.cambridge.org/core/journals/ergodic-theory-and-dynamical-sy
       pdf={https://arxiv.org/pdf/2401.10347},
 }
 
-
+@article{carrascovargas2024complexityeulerianpathproblem,
+      title={On the complexity of the Eulerian path problem for infinite graphs}, 
+      author={Nicanor Carrasco-Vargas and Valentino Delle Rose and Cristóbal Rojas},
+      journal={Discrete Applied Mathematics (to appear)},
+      pdf={https://arxiv.org/pdf/2409.03113},
+      year={2024},
+      preview={paper.png},
+      bibtex_show={true},
+      arxiv={2409.03113},
+}
 @article{carrascovargas2023characterization,
       title={Infinite Eulerian paths are computable on graphs with vertices of infinite degree}, 
       author={Nicanor Carrasco-Vargas},
